<resources>
    <string name="app_name">WuTong</string>
    <string name="app_title">WuTong</string>
    <string name="share_to_wutong">Share to WuTong</string>
    <string name="login_ok">Login</string>
    <string name="sign_up">Register</string>
    <string name="username_hint">Phone/Email/ID</string>
    <string name="pwd_hint">Password</string>
    <string name="login_error_msg">Login error, try again!</string>
    <string name="loading">Loading</string>
    <string name="username_txt">Login Name:</string>
    <string name="register_username_hint">Type Email address</string>
    <string name="password_txt">Password:</string>
    <string name="register_password_hint">6~20 alpha or number</string>
    <string name="nickname_txt">Nickname:</string>
     <string name="register_nickname_hint">Nickname</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_done">Done</string>
    <string name="label_save">Save</string>
    <string name="label_skip">Skip</string>
    <string name="share">share</string>
    <string name="share_title">Share applications</string>
    <string name="share_desc">Sharing</string>
    <string name="to">to:</string>
    <string name="comment">comment:</string>
    <string name="delete_apk_file">Delete apk file</string>
    <string name="load_posts_failed">Load posts failed</string>
    <string name="share_apk_ok">share ok</string>
    <string name="nickname_error_msg">Please input nickname</string>
    <string name="pwd_error_msg">Invalid Password</string>
    <string name="username_error_msg">Please input valid Email address</string>
    <string name="user_exist_error_msg">Username has been used</string>
    <string name="verify_txt">Verify code:(Type verify code to complete register)</string>
    <string name="phonenumber_txt">Phone Number:(Optional)</string>
     <string name="register_phonenumber_hint">Input valid phone number</string>
    <string name="verify_code_error">Incorrect verify code</string>
    <string name="label_refresh">Refresh</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_home">Home</string>
    <string name="backup_suc">Backup successfully</string>
    <string name="backup_fail">Backup failed</string>
    <string name="user_info">Info</string>
    <string name="registe_failed_msg">register failed, try again</string>
    <string name="verify_failed_msg">verify failed, try again</string>
    <string name="home_market">Pool</string>
    <string name="home_steam">Stream</string>
    <string name="home_application">App Share</string>
    <string name="home_album">Album</string>
    <string name="home_book">Brook</string>
    <string name="home_music">Music</string>
    <string name="home_account_service">Wutong Account</string>
    <string name="home_settings">Settings</string>
    <string name="home_friends">Friends</string>
    <string name="home_exchange">Exchange Profile</string>
    <string name="home_requests">Requests</string>
    <string name="home_my_profile">My Profile</string>
    <string name="home_msg">Message</string>
    <string name="home_advise">Advise</string>
    <string name="home_calling">Calling</string>
    <string name="home_others">Others</string>
	<string name="app">Application</string>
	<string name="app_intro">Introduction</string>
    <string name="app_pics">Pictures</string>
    <string name="app_open">Open</string>
    <string name="app_delete">Delete</string>
    <string name="apk_download_finish">downloaded</string>
    <string name="apk_download">DownLoad</string>
    <string name="apk_download_short">Load</string>
    <string name="apk_download_ok">Install</string>
    <string name="apk_download_failed">Download failed</string>
    <string name="apk_downloading">Downloading</string>
    <string name="apk_uploading">Uploading</string>
    <string name="apk_download_msg">"Would you like to download the application: %1$s?"</string>
    <string name="apk_install_download_msg">"%1$s package found, install with it, or download the latest version?"</string>
    <string name="app_comments">Comments</string>
    <string name="string_posts">Post</string>
    <string name="confirm_delete_apkfile">Really delete downloaded file?</string>
    <string name="user_followers">Fans</string>
    <string name="apk_wait_install">To Install</string>
	<string name="friend_add">Add</string>
    <string name="confirm_logout">Logout?</string>
	<string name="label_logout">Logout</string>
    <string name="label_login">Login</string>
    <string name="apk_installed">Installed</string>
    <string name="search_recommend">please input search key</string>
     <string name="about_title">About</string>
     <string name="pref_adv_setting">Advanced settings</string>
     <string name="pref_specific_category">Interval settings</string>
     <string name="pref_user_base_setting">Base settings</string>
    <string name="update_password">Update password</string>
    <string name="update_apk_permission">Set app permission</string>
    <string name="news_feed_comment">Comment</string>
    <string name="news_feed_like">Like</string>
    <string name="news_feed_unlike">Unlike</string>
    <string name="news_feed_reshare">Reshare</string>
    <string name="friends_view_timeout_title">Friends interval(days)</string>
    <string name="pref_string_clear_cache">Clear Cache</string>
    <string name="pref_borqs_url_select">Change Server</string>
    <string name="pref_borqs_url_select_summary">After changing server, it needs register again or sign up with a valid account.</string>
    <string name="pref_string_clear_cache_summary">Clear phone memory, release more space.</string>
     <string name="pref_pic_show">Show screen snaps</string>
     <string name="pref_pic_show_summary">Enable to show screen snaps</string>
     <string name="pref_link_market">Link to android market</string>
    <string name="pref_link_market_summary">Have no relevant applications, links to search for android market</string>
     <string name="pref_auto_install">Auto Install</string>
     <string name="pref_auto_install_summary">Auto install application after download.</string>
     <string name="pref_market_page">Application page</string>
     <string name="pref_market_page_summary">Show application details information in Google market.</string>
    <string name="install_app_share_title">Auto share</string>
    <string name="install_app_share_summary">Auto post a stream after application installation</string>
    <string name="pref_user_privacy_setting">Privacy settings</string>
    <string name="signup_application_upload_title">Instance Backup</string>
    <string name="signup_application_upload_header">Automatically backup those applications (.apk) in your device that is newer than those in remote server.</string>
    <string name="pref_borqs_debug_log">Http Log</string>
    <string name="pref_borqs_debug_log_summary">Print http response log</string>
    <string name="pref_notification_setting">Notifications settings</string>
	<string name="pref_notification_enable">Receive notifications</string>
    <string name="pref_request_setting">Requests settings</string>
    <string name="request_notification_enable">Time to receive</string>
	<string name="pref_request_vibrate">Vibrate</string>
	<string name="pref_request_vibrate_desc">Vibrate on incoming notifications</string>
	<string name="request_list_title">Refresh interval</string>
    <string name="menu_bpc_post_msg">Send message</string>
    <string name="menu_add_shortcut">Add as favorites</string>
    <string name="menu_remove_shortcut">Remove from favorites</string>
    <string name="menu_remove_all_shortcut">Remove all favorites</string>
    <string name="menu_exchange_profile">Request exchange profile.</string>
    <string name="notification_set">Notifications settings</string>
    <string name="notification_title_mention_me">mention me</string>
    <string name="notification_title_stream">stream</string>
    <string name="notification_accept_suggest">Becoming friends based on my recommendation</string>
    <string name="notification_my_app_comment">Commented app from my share</string>
    <string name="notification_my_app_like">Liked app from my share</string>
    <string name="notification_new_follower">Have new follower</string>
    <string name="notification_profile_update">My friends updated his profile</string>
    <string name="notification_app_share">Share app to me</string>
    <string name="notification_other_share">Share other info to me</string>
    <string name="notification_my_stream_comment">Commented on my post</string>
    <string name="notification_my_stream_like">Add like to my post</string>
    <string name="notification_my_stream_retweet">Forward my post</string>
    <string name="notification_suggest_user">Some friends recommended to me</string>
    <string name="home_appbox">AppMan</string>
    <string name="pref_string_version_check_title">Check New Version</string>
    <string name="pref_string_version_check_summary">Current version %1$s, check latest version</string>
    <string name="key_tabui_feature_title">Tab style UI</string>
    <string name="key_tabui_feature_summary">Select this, will show tab style. Need restart the application</string>
    <string name="key_download_feature_title">Use system download manager</string>
    <string name="key_download_feature_summary">System download service take responsibility to download applications</string>
    <string name="pref_string_privacy_info_title">Privacy Info</string>
    <string name="pref_string_privacy_info_summary">How do you store and share my info?</string>
    <string name="pref_push_service_setting">Instance Push Service</string>
    <string name="pref_string_push_service_enable_title">Enable Instance Push Service</string>
    <string name="pref_string_push_service_enable_summary">To receive notifications, request and others info instantly, please enable this service, which might consume some battery energy</string>
    <string name="key_simple_ui_feature_title">Show Recommendation and Favorites</string>
    <string name="key_simple_ui_feature_summary">Not choose, will show just one dashboard</string>
    <string name="key_monthly_sprint_feature_title">Try sprint feature</string>
    <string name="key_monthly_sprint_feature_summary">Try developing monthly sprint feature</string>
        <string name="key_monthly_new_platform_feature_title">Try new platform feature</string>
        <string name="key_use_contact_edit_title">try ics contact edit</string>
        <string name="key_show_album_title">try show user album</string>
    <string name="delete">Delete</string>
    <string name="pref_enable_data_flow_saved_mode_title">Enable Auto Saved Data Mode</string>
    <string name="pref_enable_data_flow_saved_mode_summary">To save data usage, enable this mode, so some huge data won\'t be loaded</string>
    <string name="key_use_public_circle_ui">Open Group UI</string>
    <string name="privacy_set_title">Privacy</string>
    <string name="privacy_set_open">Open</string>
    <string name="privacy_set_closed">Closed</string>
    <string name="privacy_set_secret">Secret</string>
    <string name="approve_set_title">Membership Approval</string>
     <string name="approve_set_all">Any member can add or approve members.</string>
    <string name="approve_set_manager">Any member can add members, but an admin must approve them.</string>
   <string name="join_permission_title">Join the way</string>
    <string name="join_permission_verified">Verify the join</string>
    <string name="join_permission_to_join">Directly</string>
    <string name="join_permission_forbid">Not allowed to apply to join</string>
    <string name="set_top">Set top</string>
    <string name="cancel_top">Calcel top</string>
    <string name="item_copy">Copy message</string>
    <string name="item_tags">Add tag</string>
</resources>